# gpt-2-reproduction

./: .gitignore  README.md  pyproject.toml  trainer.py
data/: dataset.py  preprocessing.py
model/: gpt2.py
